feat:product creation is done and create new categories api routes
