# apps/auth-service/src/swagger-output.json
@@ -301,8 +301,11 @@
       "get": {
         "description": "",
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
